# gestbtp

./: .env.example  .gitignore  README.md  config.py  migrate_sqlite_to_supabase.py  pyproject.toml  requirements.txt  run.py  vercel.json  vlogs.txt
.claude/: launch.json
api/: index.py
app/: __init__.py  extensions.py
app/admin/: routes.py
app/api/: auth_api.py  chantiers_api.py  rapports_api.py  taches_api.py
app/auth/: decorators.py  forms.py  routes.py
app/billing/: invoice_pdf.py  routes.py
app/chantiers/: forms.py  routes.py
app/dashboard/: routes.py
app/entreprise/: routes.py
app/facturation/: pdf.py  routes.py
app/journal/: forms.py  routes.py
app/models/: chantier.py  compte.py  facturation.py  notification.py  paiement.py  photo.py  rapport.py  setting.py  tache.py  user.py
app/pages/: routes.py
app/payments/: routes.py
app/pdf/: generator.py  routes.py
app/photos/: routes.py
app/planning/: routes.py
app/services/: compte_service.py  email_service.py  geniuspay_service.py  meteo_service.py  notification_service.py  storage_service.py
app/static/: manifest.webmanifest  sw.js
app/taches/: forms.py  routes.py
app/team/: forms.py  routes.py
app/templates/: base.html  landing.html
migrations_sql/: 01_schema_supabase.sql  02_add_subscription_fields.sql  03_add_gratuit_plan.sql  04_multitenant_comptes.sql  05_paiements.sql  06_settings.sql  07_essai_abonnement.sql  08_reference_unique_par_compte.sql  09_facturation.sql  10_identite_entreprise.sql  11_infos_legales_couleur.sql  12_securite_revoke_anon.sql
(+41 files in other folders)
