# Ce fichier sert UNIQUEMENT à déclarer le point d'entrée WSGI pour Vercel.
# Les dépendances sont gérées par requirements.txt (à la racine, à côté de run.py).
# On ne met PAS de section [project] ici pour éviter que Vercel tente
# d'installer le dossier comme un package Python (ce qui ignorait requirements.txt).

[tool.vercel]
entrypoint = "run:app"
